--- a/index.html
+++ b/index.html
@@ -44,5 +44,11 @@
       </p>
       <button class="btn">Login</button>
     </section>
+    <img class="one" src="Screenshot (208).png" alt="my example website" />
+    <img
+      class="two"
+      src="Screenshot (209).png"
+      alt="my example website screeshot"
+    />
   </body>
 </html>
